[gd_scene load_steps=4 format=3 uid="uid://x8q617q250qp"]

[ext_resource type="Script" path="res://src/main/component/Scripts/projectile_base.gd" id="1_qesg0"]
[ext_resource type="Script" path="res://src/main/common/classes/HitBox.gd" id="2_go0wb"]
[ext_resource type="Script" path="res://src/main/common/classes/HurtBox.gd" id="3_n5vj3"]

[node name="ProjectileBase" type="CharacterBody2D"]
script = ExtResource("1_qesg0")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource("2_go0wb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
debug_color = Color(0.968627, 0, 0.454902, 0.419608)

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("3_n5vj3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
debug_color = Color(0, 0.643137, 0.301961, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="hit" from="HitBox" to="." method="_on_hit_box_hit"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
